tests/kulezi_tests/good/core_023_simple.lat
int main() {
    int a = 10;
    return foo(a);
}

int foo(int a) {
    int r = a % 10;
    return r;
}