tests/kulezi_tests/bad/invalid_op015.lat
int main() {
    false>=false;

    return 0;
}